--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,6 @@ tags
 /lib/libelf/lib/sys_elf.h
 /lib/libelf/po/Makefile
 /lib/libelf/stamp-h
+/lib/libelf/lib/*.a
 /lib/libelf/lib/*.o
 /lib/libelf/lib/*.os
